--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    include \partials\header
+    p Welcome to my personal portfolio website. Explore and have some fun!
